--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -3,49 +3,34 @@ version: '3.8'
 services:
   auth-service:
     build:
-      context: ./RideShareAppAuthService
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
-    networks:
-      - ride-share-network
-    healthcheck:
-      test: [ "CMD", "curl", "--fail", "http://localhost:8080/api/rs/health" ]
-      interval: 10s
-      retries: 3
-      timeout: 5s
-      start_period: 20s
-
-  ride-service:
-    build:
-      context: ./RideShareAppRideService
+      context: ./AttendanceTrackingSystemAuthService
       dockerfile: Dockerfile
     ports:
       - "8081:8081"
     networks:
-      - ride-share-network
+      - student-attendance
     healthcheck:
-      test: [ "CMD", "curl", "--fail", "http://localhost:8081/api/rs/health" ]
+      test: [ "CMD", "curl", "--fail", "http://localhost:8081/api/health" ]
       interval: 10s
       retries: 3
       timeout: 5s
       start_period: 20s
 
-  chat-service:
+  attendance-service:
     build:
-      context: ./RideShareAppChatService
+      context: ./AttendanceTrackingSystemAttendanceService
       dockerfile: Dockerfile
     ports:
       - "8082:8082"
     networks:
-      - ride-share-network
+      - student-attendance
     healthcheck:
-      test: [ "CMD", "curl", "--fail", "http://localhost:8082/api/rs/health" ]
+      test: [ "CMD", "curl", "--fail", "http://localhost:8082/api/health" ]
       interval: 10s
       retries: 3
       timeout: 5s
       start_period: 20s
-
+      
 #  cassandra:
 #    build: .
 #    image: cassandra
@@ -55,8 +40,8 @@ services:
 #    ports:
 #      - "9042:9042"
 #    networks:
-#      - ride-share-network
+#      - student-attendance
 
 networks:
-  ride-share-network:
+  student-attendance:
     driver: bridge
